<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/tomato"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/service_fee"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/service_fee"/>

    <TextView
        android:id="@+id/service_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_rating"
        app:layout_constraintStart_toStartOf="@id/service_fee"
        app:layout_constraintTop_toBottomOf="@id/service_fee"
        android:alpha="0.8"
        />
    <RadioGroup
        android:id="@+id/tip_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/okay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_rating"
        >
        <RadioButton
            android:id="@+id/amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing"
            />
        <RadioButton
            android:id="@+id/good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            />
        <RadioButton
            android:id="@+id/okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay"
            />
    </RadioGroup>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/round_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_percent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/round"
        android:checked="true"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/round_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/calculate_button_drawable"
        android:text="@string/calculate"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
